@@ -28,6 +28,7 @@ Le Temps (letemps.ch)\
 Los Angeles Times (latimes.com)\
 Medium (medium.com)\
 Medscape (medscape.com)\
+New Statesman (newstatesman.com)\
 MIT Technology Review (technologyreview.com)\
 Nikkei Asian Review (asia.nikkei.com)\
 NRC (nrc.nl)\
