@@ -28,6 +28,7 @@ var defaultSites = {
   'Medium': 'medium.com',
   'Medscape': 'medscape.com',
   'MIT Technology Review': 'technologyreview.com',
+  'New Statesman': 'newstatesman.com',
   'Nikkei Asian Review': 'asia.nikkei.com',
   'NRC': 'nrc.nl',
   'The Boston Globe': 'bostonglobe.com',
@@ -69,7 +70,8 @@ const allow_cookies = [
 'bostonglobe.com',
 'denverpost.com',
 'hacked.com',
-'ocregister.com'
+'ocregister.com',
+'newstatesman.com'
 ]
 
 // Removes cookies after page load
@@ -84,7 +86,8 @@ const remove_cookies = [
 'bostonglobe.com',
 'denverpost.com',
 'hacked.com',
-'ocregister.com'
+'ocregister.com',
+'newstatesman.com'
 ]
 
 function setDefaultOptions() {
