@@ -1,5 +1,6 @@
 Updates--
 
+2018-07-22 v1.3.5: Added newstatesman.com
 2018-07-15 v1.3.4: Added OC Register (ocregister.com), added Caixin (caixinglobal.com)
 2018-07-14 v1.3.3: Add back clearing of localStorage in contentScript.js (fixes wapo.com for U.S. users)
 2018-07-08 v1.3.2: Fixed Haaretz (haaretz.co.il)
